lintian (1.23.8) UNRELEASED; urgency=low

  * checks/common_data.pm:
    [CW] Add tclx8.4 to %known_tclxs.
  * checks/scripts, checks/scripts.desc:
    [CW] Add checks for tclsh8.4 and wish8.4. (Closes: #288287)
  * checks/description:
    [SRL] Do not generate warnings when a short description starts with
    an article; this is good grammar and should not be discouraged.
    (Closes: #290505)

 -- Colin Watson <cjwatson@debian.org>  Sun,  9 Jan 2005 23:48:45 +0000

lintian (1.23.7) unstable; urgency=high

  * lib/Lab.pm:
    + Fixed creation of static lab if the directory already existed, this
      failed in 1.23.6
    + In temporary lab mode, try to create the directory several
      times before giving up
  
  * testset/runtests: Extend the static lab test

 -- Frank Lichtenheld <djpig@debian.org>  Sat,  8 Jan 2005 21:41:21 +0100

lintian (1.23.6) unstable; urgency=low

  The "Let's see if I can upload myself now" release, made by Marc, Frank and
  Colin, uploaded by Jeroen.

  * checks/description
    + [HE] Warn if the short description start with an article or a capital
      letter. Patch by Tobias Toedter <t.toedter@gmx.net>, thanks. (Closes:
      #258824)
  * checks/fields:
    + [HE] Warn if the debian revision has three parts, as this is the sign of
      a binary NMU. New check's name is binary-nmu-debian-revision-in-source.
      (Closes: #244830)
    + [HE] Warn if people use the Bugs field to refer to the Debian BTS, the
      new check is called redundant-bugs-field. (Closes: #245883)
  * checks/files:
    + [HE] Check that .desktop files are placed in /usr/share/applications.
      This seems to be the standard place for those files that are used
      to create menus. The check is called desktop-file-in-wrong-dir. 
      (Closes: #200171)
  * checks/manpages:
    + [HE] Don't compare the manpage filename extension and the content of
      .TH case-sensitive. Report + patch by Jay Berkenbilt <ejb@ql.org>,
      thanks. (Closes: #285335)