@@ -1,5 +1,6 @@
 E: binary: changelog-file-not-compressed changelog
 E: binary: debian-changelog-file-missing
+E: binary: file-directly-in-usr-share usr/share/baz
 E: binary: menu-item-missing-required-tag section /usr/lib/menu/binary:1
 E: binary: non-wm-in-windowmanager-menu-section x11 /usr/lib/menu/binary:4
 E: binary: postinst-does-not-call-updatemenus usr/lib/menu/binary
@@ -21,9 +22,11 @@ W: binary: binary-without-manpage hello.static
 W: binary: binary-without-manpage iminusrbin
 W: binary: binary-without-manpage static-hello
 W: binary: executable-not-elf-or-script ./usr/bin/iminusrbin
+W: binary: file-in-unusual-dir usr/bar
 W: binary: invalid-date-in-changelog The, 15 Apr 2004 23:33:51 +0200
 W: binary: menu-command-not-in-package /usr/lib/menu/binary:6 /imnothere
 W: binary: menu-item-needs-tag-has-unknown-value wm /usr/lib/menu/binary:5
+W: binary: package-contains-hardlink usr/bar2 -> usr/share/baz
 W: binary: package-contains-upstream-install-documentation usr/share/doc/binary/INSTALL
 W: binary: unquoted-string-in-menu-item /usr/lib/menu/binary needs:1
 W: binary: unquoted-string-in-menu-item /usr/lib/menu/binary needs:2
