@@ -1,5 +1,6 @@
 E: etcfiles: changelog-file-not-compressed changelog
 E: etcfiles: file-in-etc-not-marked-as-conffile /etc/improper
-E: etcfiles: file-in-etc-not-marked-as-conffile /etc/proper
+E: etcfiles: file-in-etc-not-marked-as-conffile /etc/improper-link
 E: etcfiles: no-copyright-file
 W: etcfiles source: ancient-standards-version 3.5.0
+W: etcfiles: package-contains-hardlink etc/improper-link -> etc/improper
